# assessment-solution-april

./: .gitignore  README.md  requirements.txt
data/: palm_ffb.csv
solution_of_question_1/: main.ipynb  requirements.txt
solution_to_question_2/: analisa.ipynb  main.ipynb  pyproject.toml
solution_to_question_2/solution_to_question_2/: analisa.ipynb  main.ipynb
solution_to_question_3/: main.ipynb  pyproject.toml
solution_to_question_3/solution_to_question_3/: main.py
