[tool.poetry]
name = "solution-to-question-2"
version = "0.1.0"
description = ""
authors = ["rammafitraCYT <rammafitracyt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
